# yagolic

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: compile.yml  cross-compile.yml  format.yml  lint.yml
cmake/: Toolchain-clang-windows.cmake  Toolchain-gcc-windows.cmake
include/: board.h  clear_screen.h  copyBoard.h  copy_board.h  countNeighbours.h  count_neighbours.h  gameOfLife.h  null_pointer_check.h  printBoard.h  print_board.h  randomInitBoard.h  random_init_board.h  spreadLife.h  spread_life.h  yagolic.h
src/: clear_screen.c  copyBoard.c  copy_board.c  countNeighbours.c  count_neighbours.c  gameOfLife.c  init_board.c  null_pointer_check.c  printBoard.c  print_board.c  randomInitBoard.c  random_init_board.c  spreadLife.c  spread_life.c  yagolic.c
